--- a/app/assets/stylesheets/background.css
+++ b/app/assets/stylesheets/background.css
@@ -1,6 +1,6 @@
 .background-container {
   /* Set the background image */
-  background-image: url('path/to/your/image.jpg');
+  background-image: url('<%= asset_path('logo.jpg') %>');
   /* Adjust background image properties */
   background-size: cover;
   background-position: center;
