--- a/app/views/nutrition_logs/index.html.erb
+++ b/app/views/nutrition_logs/index.html.erb
@@ -4,7 +4,7 @@
 <div>
   <%= link_to "New nutrition log", new_nutrition_log_path %>
 </div>
-<%= line_chart current_user.nutrition_logs.average(:sleep_current) %>
+<%= line_chart current_user.nutrition_logs.group(:created_at).average(:sleep_current) %>
 <hr class="hr hr-blurry" />
 <div id="nutrition_logs">
   <% @nutrition_logs.each do |nutrition_log| %>
