--- a/app/views/workout_logs/index.html.erb
+++ b/app/views/workout_logs/index.html.erb
@@ -11,6 +11,7 @@
 <div>
   <%= link_to "New workout log", new_workout_log_path %>
 </div>
+<%= pie_chart current_user.workout_logs.group(:regimen).count %>
 <hr class="hr hr-blurry" />
 <div id="workout_logs">
   <% @workout_logs.each do |workout_log| %>
