--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,7 +10,14 @@
   <% end %>
   <p><%= @post.likes.count %> <%= (@post.likes.count) == 1 ? 'Like' : 'Likes'%></p>
   
-  <%= render "comments/form", comment: @comment%>
+  <b>Comments</b>
+  <br>
+  <%- @post.comments.each do |comment|%>
+    <%= comment.text%>
+    <br>
+  <% end %>
+
+ <%= render "comments/form", comment: @comment%>
 
   <%= link_to "Edit this post", edit_post_path(@post) %> |
   <%= link_to "Back to posts", posts_path %>
