--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,7 +13,7 @@
   <b>Comments</b>
   <br>
   <%- @post.comments.each do |comment|%>
-    <%= comment.text%>
+    <%= comment.comment_text%>
     <br>
   <% end %>
 
