--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,6 +11,7 @@
   <p><%= @post.likes.count %> <%= (@post.likes.count) == 1 ? 'Like' : 'Likes'%></p>
   
   <b>Comments</b>
+  <%= render "comments/form", comment: @comment%>
   <br>
   <%- @post.comments.each do |comment|%>
     <%= comment.comment_text%>
