--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,6 @@
 <div id="<%= dom_id comment %>">
   <p>
-    <strong>Comment text:</strong>
+    <strong>Comment:</strong>
     <%= comment.comment_text %>
   </p>
 
