--- a/app/views/nutrition_logs/_form.html.erb
+++ b/app/views/nutrition_logs/_form.html.erb
@@ -33,12 +33,12 @@
   </div>
 
   <div>
-    <%= form.label :calories_min, style: "display: block" %>
+    <%= form.label :calories_max, style: "display: block" %>
     <%= form.number_field :calories_max %>
   </div>
 
   <div>
-    <%= form.label :sleep_max, style: "display: block" %>
+    <%= form.label :sleep_min, style: "display: block" %>
     <%= form.text_field :sleep_min %>
   </div>
 
