--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,32 +1,23 @@
 <%= form_with(model: comment) do |form| %>
-  <% if comment.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
+   <% if comment.errors.any? %>
+    <div id="error_explanation">
+     <h2><%= pluralize(comment.errors.count, "error") %> prohibited this comment from being saved: 
+     </h2>
 
-      <ul>
-        <% comment.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+     <ul>
+      <% comment.errors.each do |error| %>
+       <li><%= error.full_message %></li>
+      <% end %>
+     </ul>
     </div>
-  <% end %>
+   <% end %>
 
-  <div>
-    <%= form.label :user_id, style: "display: block" %>
-    <%= form.text_field :user_id %>
-  </div>
+   <%= form.hidden_field :post_id %>
 
-  <div>
-    <%= form.label :post_id, style: "display: block" %>
-    <%= form.text_field :post_id %>
-  </div>
+   <%= form.label :text, "Text:" %>
+   <%= form.text_area :text %>
 
-  <div>
-    <%= form.label :text, style: "display: block" %>
-    <%= form.text_area :text %>
-  </div>
-
-  <div>
+   <div class="actions">
     <%= form.submit %>
-  </div>
-<% end %>
+   </div>
+  <% end %>
