--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -13,6 +13,7 @@
    <% end %>
 
    <%= form.hidden_field :post_id %>
+   <%= form.hidden_field :user_id %>
 
    <%= form.label :text, "Text:" %>
    <%= form.text_area :text %>
