--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,6 +12,13 @@
 </div>
 
 <div>
+  <%= link_to "Edit this post", edit_posts_path(@post) %> |
+  <%= link_to "Back to post", posts_path %>
+
+  <%= button_to "Destroy this post", @post, method: :delete %>
+</div>
+
+<div>
   <b>Comments</b>
  <br>
  <%- @post.comments.each do |comment|%>
