--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -23,6 +23,7 @@
  <br>
  <%- @post.comments.each do |comment|%>
    <%= comment.text%>
+    <%= button_to "Destroy this comment", @comment, method: :delete %>
    <br>
  <% end %>
 
