--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -21,7 +21,7 @@
 <div>
   <b>Comments</b>
  <br>
-<div class="row d-flex justify-content-center">
+<div class="row d-flex justify-content-left">
   <div class="col-md-8 col-lg-6">
     <div class="card shadow-0 border" style="background-color: #f0f2f5;">
       <div class="card-body p-4">
