--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,11 +15,13 @@
 <!-- Container for displaying posts -->
 <div id="posts">
   <% @posts.each do |post| %>
-    <%= render post %>
-    <p>
-      <%= link_to "Show this post", post %>
-      <%= post.likes.count %> <%= (post.likes.count) == 1 ? 'Like' : 'Likes'%>
-    </p>
+    <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <p class="card-text"><%= render post %></p>
+        <%= link_to "Show this post", post %>
+        <a href="#" class="card-link"><%= post.likes.count %> <%= (post.likes.count) == 1 ? 'Like' : 'Likes'%></a>
+      </div>
+    </div>
     <hr class="hr hr-blurry" />
   <% end %>
 </div>
