--- a/app/views/workout_logs/index.html.erb
+++ b/app/views/workout_logs/index.html.erb
@@ -18,5 +18,6 @@
       <a href="#" class="card-link"><%= link_to "Show this workout log", workout_log %></a>
     </div>
   </div>
+  <hr class="hr hr-blurry" />
   <% end %>
 </div>
