--- a/app/views/workout_logs/index.html.erb
+++ b/app/views/workout_logs/index.html.erb
@@ -1,7 +1,13 @@
 <p style="color: green"><%= notice %></p>
 
 <h1>Your Daily Workout Logs</h1>
+<% warriorlevel_message = WARRIORLEVEL_MESSAGES[current_user.warriorlevel] %>
 
+<% if warriorlevel_message.present? %>
+  <div class="alert alert-info">
+    <%= warriorlevel_message %>
+  </div>
+<% end %>
 <div>
   <%= link_to "New workout log", new_workout_log_path %>
 </div>
@@ -12,12 +18,10 @@
 <hr class="hr hr-blurry" />
 <div id="workout_logs">
   <% @workout_logs.each do |workout_log| %>
-  <div class="card" style="width: 18rem;">
-    <div class="card-body">
-      <p class="card-text"><%= render workout_log %></p>
-      <a href="#" class="card-link"><%= link_to "Show this workout log", workout_log %></a>
-    </div>
-  </div>
-  <hr class="hr hr-blurry" />
+    <%= render workout_log %>
+    <p>
+      <%= link_to "Show this workout log", workout_log %>
+    </p>
+    <hr class="hr hr-blurry" />
   <% end %>
 </div>
