--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,7 +1,8 @@
 <div id="<%= dom_id post %>">
-  <p>
-    <strong>Content:</strong>
-    <%= post.content %>
-  </p>
-
+  <div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title"><%= post.created_at %></h5>
+      <p class="card-text"><%= post.content %></p>
+    </div>
+  </div>
 </div>
