--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,24 +1,21 @@
 <p style="color: green"><%= notice %></p>
-
-<div class="card" style="width: 18rem;">
-  <div class="card-body">
-    <p class="card-text"><%= render @post %></p>
-    <div>
-      <%= button_to 'Like', post_likes_path(@post), method: :post %>
-      <% pre_like = @post.likes.find { |like| like.user_id == current_user.id} %>
-      <% if pre_like %>
-        <%= button_to 'Unlike', post_like_path(@post, pre_like), method: :delete %>
-      <% end %>
-      <p><%= @post.likes.count %> <%= (@post.likes.count) == 1 ? 'Like' : 'Likes'%></p>
-    </div>
-  </div>
+<div>
+  <%= render @post %>
+  <%= button_to 'Like', post_likes_path(@post), method: :post %>
+  <% pre_like = @post.likes.find { |like| like.user_id == current_user.id} %>
+  <% if pre_like %>
+    <%= button_to 'Unlike', post_like_path(@post, pre_like), method: :delete %>
+  <% end %>
+  <p><%= @post.likes.count %> <%= (@post.likes.count) == 1 ? 'Like' : 'Likes'%></p>
 </div>
+
 <div>
   <%= link_to "Edit this post", edit_post_path(@post) %> |
   <%= link_to "Back to post", posts_path %>
 
   <%= button_to "Destroy this post", @post, method: :delete %>
 </div>
+
 
 <div class="row d-flex justify-content-left">
   <div class="col-md-8 col-lg-6">
