--- a/app/views/workout_logs/_workout_log.html.erb
+++ b/app/views/workout_logs/_workout_log.html.erb
@@ -3,7 +3,7 @@
     <div class="card-body">
       <h5 class="card-title"><strong>Created At:</strong><%= workout_log.created_at %></h5>
       <h6 class="card-subtitle mb-2 text-muted"><%= workout_log.regimen %></h6>
-      <p class="card-text"><strong>Description:</strong><%= workout_log.description %></p>
+      <p class="card-text"><%= workout_log.description %></p>
     </div>
   </div>
 </div>
