--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,8 +1,8 @@
 <div id="<%= dom_id post %>">
   <div class="card" style="width: 18rem;">
     <div class="card-body">
-      <h5 class="card-title"><%= post.created_at %></h5>
-      <p class="card-text"><%= post.content %></p>
+      <h5 class="card-title"><%= post.content %></h5>
+      <p class="card-text"><%= post.created_at %></p>
     </div>
   </div>
 </div>
