--- a/app/views/articles/home.html.erb
+++ b/app/views/articles/home.html.erb
@@ -5,15 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background-image: url('logo.jpg');
-      background-size: cover;
-      background-position: center;
-    }
   </style>
 </head>
 <body>
+  <%= image_tag 'logo.jpg' %>
 </body>
 </html>
