--- a/app/views/articles/home.html.erb
+++ b/app/views/articles/home.html.erb
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
   <style>
+    body {
+      min-height: 100vh;
+      max-width: 400px;
+    }
   </style>
 </head>
 <body>
