--- a/app/views/articles/home.html.erb
+++ b/app/views/articles/home.html.erb
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
   <style>
+    div {
+      width: auto
+      height: 400px
   </style>
 </head>
 <body>
